--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,14 +3,18 @@
 @tailwind utilities;
 
 .active {
-  color:#F7AB0A;
+  color: #f7ab0a;
 }
 
 @layer components {
   .contactInput {
     @apply outline-none bg-slate-400/10 rounded-sm border-b md:px-8 px-2 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all 
-    focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40 hover:border-[#F7AB0A]/40 
+    focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40 hover:border-[#F7AB0A]/40;
+  }
+
+  .scrollbar-thumb-\[\#F7AB0A\]\/80 {
+    --scrollbar-thumb: rgba(247, 171, 10, 0.8) !important;
+    z-index: 999;
+    position: relative;
   }
 }
-
-
